################################################################################################
                             Changelog and Credits                                            
                                                                                                         
Please help me not forget anyone, send patches with your (or other) 
name and/or change for me to add below. Thanks!
                        
Sarissa is documented with JSDoc [http://jsdoc.sourceforge.net/], tested 
with ECMAUnit [http://kupu.oscom.org/download/]  and built using 
Apache Maven [http://maven.apache.org/]. Code is checked using 
some custom code and JSLint [www.JSLint.com] (Really cool license, 
too bad it relies in common sense).

Sarissa was inspired by articles and code available on the web, most notably 
the IE Emu Series [http://webfx.eae.net/dhtml/ieemu/] and Cross-Browser DOM 
Wrapper [http://www.webreference.com/programming/javascript/domwrapper/].
 
################################################################################################

0.9.9
    * Fixed errors in Sarissa.updateContentFromForm (that's what you get for 
      not keeping your unit tests up to date)
    
0.9.8.1
    * Fixed pickRecentProgID variable scope and JSLint compliance thanks to Duncan Booth
    * Fixed included/imported stylesheet along with the document() function for 
      MSXML 3.0 thanks to a bug report by zizo1 (sf user)
    * Added compressed versions of all script files; they are created automatically
      thanks to the MobilVox Maven JavaScript Plugin, see
      http://www.mobilvox.com/projects/maven-js-plugin/
    * Added syntax highlighting to the HOWTOs thanks to the integration of SyntaxHighlighter
      by Alex Gorbatchev to our custom Maven skin, see 
      http://code.google.com/p/syntaxhighlighter/


0.9.8.0
    * Changed importStylesheet for IE thanks to dougdomeny. 
    * Fixed XSLT parameter clearing bugs thanks to Vitaliy Ischenko